<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:id="@+id/eancontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/ean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:minEms="@integer/ean_width"
            android:saveEnabled="true"
            app:met_baseColor="?colorPrimary"
            app:met_checkCharactersCountAtBeginning="false"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="@integer/ean_size"
            app:met_minCharacters="@integer/ean_min_size"
            app:met_primaryColor="?colorPrimary"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:id="@+id/start_scan_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanner_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/eancontainer"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/scanner_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_scan"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_below="@+id/eancontainer"
        android:layout_marginTop="25dp"
        android:paddingRight="20dp"
        android:textIsSelectable="true"
        android:textSize="@dimen/head_line"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bookSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_below="@+id/bookTitle"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3" />

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/eancontainer"
        android:layout_alignRight="@+id/eancontainer"
        android:layout_below="@+id/bookSubTitle"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:textSize="@dimen/small_fontsize" />

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_alignTop="@+id/authors"
        android:contentDescription="@string/book_cover" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_below="@+id/bookCover"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/small_fontsize" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/cancel_button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/ok_button"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/search"
            android:textColor="@android:color/white" />
    </FrameLayout>

</RelativeLayout>